# branches

./: .gitlab-ci.yml  Cargo.toml  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
build-aux/: dev.freyja_lynx.Branches.Devel.json
data/: dev.freyja_lynx.Branches.desktop.in.in  dev.freyja_lynx.Branches.gschema.xml.in  dev.freyja_lynx.Branches.metainfo.xml.in.in
data/resources/: resources.gresource.xml
po/: POTFILES.in
src/: agent.rs  api.rs  app.rs  client.rs  main.rs  recordview.rs  templates.rs  types.rs
src/modals/: about.rs
