[package]
name = "branches"
version = "0.1.0"
authors = ["freyja-lynx <github.com.tidy739@passinbox.com>"]
edition = "2021"
publish = false

[profile.release]
lto = true

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
relm4 = { version = "0.8.1", features = ["libadwaita", "gnome_46"] }
tracing = "0.1.37"
tracing-subscriber = "0.3"
atrium-api = "0.24.9"
atrium-xrpc-client = "0.5.10"
tokio = "=1.43.0"
http = "1.2.0"
