[package]
name = "branches"
version = "0.1.0"
authors = ["freyja-lynx <github.com.tidy739@passinbox.com>"]
edition = "2021"
publish = false

[profile.release]
lto = true

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
relm4 = { version = "0.9.1", features = ["libadwaita", "gnome_46"] }
tracing = "0.1.37"
tracing-subscriber = "0.3"
atrium-api = "0.24.10"
atrium-xrpc-client = "0.5.10"
reqwest = "0.12.20"
serde_json = "1.0.135"
